--- a/emr_cluster.yml
+++ b/emr_cluster.yml
@@ -3,28 +3,28 @@ AWSTemplateFormatVersion: '2010-09-09'
 Parameters:
   InstanceType:
     Type: String
-    Default: "m4.xlarge"
+    #Default: "m4.xlarge"
   ReleaseLabel:
     Type: String
-    Default: "emr-6.5.0"
+   # Default: "emr-6.5.0"
   SubnetId:
     Type: String
-    Default: "subnet-66d1882a"
+   # Default: "subnet-66d1882a"
   MinimumCapacityUnits:
     Type: String
-    Default: "3"
+  #  Default: "3"
   MaximumCapacityUnits:
     Type: String
-    Default: "10"
+   # Default: "10"
   MaximumCoreCapacityUnits:
     Type: String
-    Default: "2"
+   # Default: "2"
   MaximumOnDemandCapacityUnits:
     Type: String
-    Default: "8"
+   # Default: "8"
   UnitType:
     Type: String
-    Default: "Instances"
+  #  Default: "Instances"
 Resources:
   cluster:
     Type: AWS::EMR::Cluster
