--- a/buildspec.yml
+++ b/buildspec.yml
@@ -25,7 +25,8 @@ phases:
       - sam validate --template $TEMPLATE 
       - sam build -t $TEMPLATE
       - sam package --output-template-file template.yaml -t $TEMPLATE
-      - zip -r internal.zip template.yaml
+      - zip -r SampleApp.zip template.yaml params.json
+      - aws s3 cp SampleApp.zip s3://emrbucketcicdpipeline/
 
   post_build:
     commands:
