--- a/alb_for_validation.yaml
+++ b/alb_for_validation.yaml
@@ -29,8 +29,8 @@ Resources:
       Name: datasci-zep
       TargetType: instance
       Targets:
-        Id: i-005c0d30a733efacc
-        Port: 8890
+        - Id: i-005c0d30a733efacc
+        - Port: 8890
 
       Port: 8890
       Protocol: HTTP
@@ -81,8 +81,8 @@ Resources:
       Name: datasci-hue1
       TargetType: instance
       Targets:
-        Id: i-005c0d30a733efacc
-        Port: 8888
+        - Id: i-005c0d30a733efacc
+        - Port: 8888
 
       Port: 8888
       Protocol: HTTP
