--- a/madam.yml
+++ b/madam.yml
@@ -26,27 +26,21 @@ Resources:
         - Name: ZooKeeper
         - Name: Zeppelin
       Instances:
-        MasterInstanceFleet:
+        MasterInstanceGroup:
+          InstanceCount: 1
+          InstanceType: !Ref InstanceType
+          Market: ON_DEMAND
           Name: cfnMaster
-          TargetOnDemandCapacity: 1
-          TargetSpotCapacity: 0
-          InstanceTypeConfigs:
-            - InstanceType: !Ref InstanceType
-              WeightedCapacity: 1
-        CoreInstanceFleet:
+        CoreInstanceGroup:
+          InstanceCount: 1
+          InstanceType: !Ref InstanceType
+          Market: ON_DEMAND
           Name: cfnCore
-          TargetOnDemandCapacity: 1
-          TargetSpotCapacity: 0
-          InstanceTypeConfigs:
-            - InstanceType: !Ref InstanceType
-              WeightedCapacity: 1
-        TaskInstanceFleets:
-          - Name: cfnTask
-            TargetOnDemandCapacity: 1
-            TargetSpotCapacity: 0
-            InstanceTypeConfigs:
-              - InstanceType: !Ref InstanceType
-                WeightedCapacity: 1
+        TaskInstanceGroups:
+          - InstanceCount: 1
+            InstanceType: !Ref InstanceType
+            Market: ON_DEMAND
+            Name: cfnTask-1
         TerminationProtected: !Ref TerminationProtected
         Ec2SubnetIds:
           - !Ref SubnetId
